--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <nav class="navbar">
         <div class="logo">Healthcare Pro</div>
         <div class="menu">
-            <a href="home.HTML">Home</a>
+            <a href="home.html">Home</a>
             <a href="clients.html">Clients</a>
             <a href="services.html">Services</a>
             <a href="#contact">Contact</a>
